# scannerapp

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/MainWindow/: MainWindow.cpp  MainWindow.h
src/ScanManager/: ScanManager.cpp  ScanManager.h
